# conversational-survey-engine

./: .env.example  .gitignore  README.md  deploy.ps1  docker-compose.dev.yml  docker-compose.yml  server.ps1  test_endpoint.py
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_question_mode.py  003_reconcile_schema.py
backend/app/: main.py
backend/app/agents/: answer_guardrails.py  generator_agent.py  prompts.py  validator.py
backend/app/api/: admin.py  health.py  participant.py  router.py
backend/app/clients/: llm_client.py
backend/app/core/: config.py  database.py  dependencies.py
backend/app/models/: __init__.py  response.py  session.py  survey.py  user.py
backend/app/repositories/: response_repo.py  session_repo.py  survey_repo.py
backend/app/schemas/: response.py  session.py  survey.py
backend/app/services/: question_service.py  session_service.py  survey_service.py
backend/tests/: conftest.py  test_admin_api.py  test_generator_agent.py  test_guardrails.py  test_participant_api.py  test_preset_questions.py  test_services.py  test_validator.py
database/: README.md  schema.sql  seed.sql
docs/: admin-guide.md  api-reference.md  architecture.md  deployment.md  participant-guide.md  setup.md
frontend/: Dockerfile  (+5 more)
llm-service/: .dockerignore  Dockerfile  pyproject.toml
llm-service/app/: config.py  main.py  routes.py  schemas.py
llm-service/app/agents/: answer_guardrails.py  generator_agent.py  prompts.py  validator.py
(+62 files in other folders)
